font family updated

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -3,4 +3,8 @@
 @import "tutors.scss";
 @import "container.scss";
 @import "tutorDetails.scss";
-@import "nav.scss"
+@import "nav.scss";
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
