--- a/frontend/src/styles/tutors.scss
+++ b/frontend/src/styles/tutors.scss
@@ -2,13 +2,8 @@
     // height: 100vh;
 }
 .tutors{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    justify-content: center;
-    // height: 100%;
-    // border:solid 1px black;
-    grid-gap: 1rem;
+    position: relative;
+    margin-top: 5rem;
 }
 .tutor-link{
     cursor:pointer;
@@ -18,4 +13,17 @@
 .tutors-notifications{
     grid-row: span 2;
     grid-column: 2/3;
+}
+
+// TUTOR PROFILE
+.tutor-profile-container{
+    height:100vh;
+}
+//TUTOR PREVIEW
+.preview-container{
+    height: 100vh;
+}
+//NOTIFICATIONS
+.notifications{
+    height:100vh;
 }
