Styling almost complete

--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -10,3 +10,14 @@
 .nav{
     column-gap: 6rem;
 }
+.signin-inputs{
+    row-gap: 1rem;
+}
+input{
+    width:700px;
+    text-align: c;
+}
+button{
+    width:700px;
+    border:none;
+}
