--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -4,7 +4,8 @@
 @import "container.scss";
 @import "tutorDetails.scss";
 @import "nav.scss";
+@import "student.scss";
 
 body {
-    font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
