--- a/frontend/src/styles/signin.scss
+++ b/frontend/src/styles/signin.scss
@@ -14,3 +14,10 @@
     width: auto;
   }
 }
+.signup-usertype{
+    column-gap: 2rem;
+}
+.tutor-student{
+    width:180px;
+    cursor: pointer;
+}
